--- a/Assignment One/Nato/Style.css
+++ b/Assignment One/Nato/Style.css
@@ -111,7 +111,7 @@ nav a:hover::before{
     height: 500px;
 }
 
-.gaming{
+.insta{
     background-color: #2d303a;
     height:500px;
 }
@@ -123,6 +123,11 @@ nav a:hover::before{
 
 .music{
     background-color: #f2f2f2;
+    height: 500px;
+}
+
+.gaming{
+    background-color: #2d303a;
     height: 500px;
 }
 
@@ -181,3 +186,10 @@ p1{
     font-size: 1.1rem;
      max-width: 550px;
 }
+
+.instagram-media{
+    width: 300px;
+    height: 497px;
+    float: left;
+}
+
