--- a/Assignment One/Nato/Style.css
+++ b/Assignment One/Nato/Style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url('https://fonts.googleapis.com/css?family=Rokkitt');
 
 /*
 div{
@@ -8,24 +10,21 @@ div{
 
 
 body{
-    background-color: #f2f2f2;
+    background-color: #e8e8e8;
     margin: 0;
-    font-family: 'lato', sans-serif;
+    font-family: 'Rokkitt', serif;
+    max-width: 1750px;
 }
 
-.header{
-    background-color: #2d303a;
-    color:white;
-    height:90px;
-}
+
 
 .fixedheader{
     position: fixed;
     height: 90px;
     background-color: #2d303a;
     width: 100%;
-    max-width: 1280px;
     opacity: 0.9;
+    font-family: 'Lato', sans-serif
 
 }
 
@@ -49,6 +48,7 @@ nav .logo{
     position: fixed;
     margin-left: 650px;
     color: white;
+    font-family: 'Indie Flower', cursive;
 }
 
 .links{
@@ -92,84 +92,92 @@ nav a:hover::before{
 }
 
 .photo{
-    max-width: 1280px;
+    background-color: #e8e8e8;
+    height: 1080px;
+    max-width: 1900px;
+    
 }
-.gallery{
-    background-color: #f06c64;
-    height: 720px;
+.photo2{
+    background-color: #e8e8e8;
+    height: 1080px;
     text-align: center;
 }
 
+
 .about{
-    background-color: #f2f2f2;
-    color: ;
+    background-color: #e8e8e8;
     height: 500px;
+    font-family: monospace;
+    max-width: 950;
 }
 
 .football{
-    background-color: #f2f2f2;
-    height: 500px;
+    background-color: #e8e8e8;
+    height: 700px;
+    
 }
 
 .insta{
     background-color: #2d303a;
     height:500px;
+    text-align: center;
 }
 
 .contact{
-    background-color: #f06c64;
-    height: 100px;
+    background-color: #2d303a;
+    height: 50px;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 0.9rem;
 }
 
 .music{
-    background-color: #f2f2f2;
+    background-color: #e8e8e8;
     height: 500px;
+    max-height: 500p;
 }
 
-.gaming{
-    background-color: #2d303a;
-    height: 500px;
-}
 
 iframe {
     float: right;
     margin-top: 50px;
+    
 }
 
 .ftabout{
     float:left;
-    margin-top: 20px;
+    margin-top: 30px;
     max-width: 400px;
     height: 170px;
 }
 
 .ftwngnat{
     float:right;
-    margin-top: 20px;
+    margin-top: 30px;
     max-width: 400px;
     height: 195px;
 }
 
 .ftschool{
     float:left;
-    padding-top: 0px;
+    padding-top: 40px;
     max-width: 400px;
 }
 
 .ftsenior{
     float: right;
-    padding-top: 0px;
+    padding-top: 60px;
     max-width: 400px;
-    
 }
 
 p{
-    font-size: 0.85rem;
+    font-size: 1rem;
     text-align: justify;
 }
 
 h1{
-    margin-top: 40px;
+    margin-top: 60px;
     height: 10px;
 }
 
@@ -187,9 +195,32 @@ p1{
      max-width: 550px;
 }
 
+
 .instagram-media{
     width: 300px;
     height: 497px;
     float: left;
+    margin-left: inherit;
+    text-align: center;
+    position: static;
 }
 
+.p1{
+    max-width: 450px;
+    margin-top: 100px;
+}
+
+
+h5{
+    display: inline;
+    font-size: 
+}
+
+p4{
+    font-size: 0.75rem;
+    margin-top: 0px;
+}
+
+.contacttxt{
+    
+}
